Fix overflow problem on small screens

--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
   box-sizing: border-box;
 }
 
-
 body {
   min-height: 100vh;
   background-image: radial-gradient(
@@ -233,28 +232,30 @@ header {
   z-index: -5;
 }
 
-.winner-circles-inner, .winner-circles-midd, .winner-circles-outer{
+.winner-circles-inner,
+.winner-circles-midd,
+.winner-circles-outer {
   border-radius: 50%;
   background-color: white;
   position: absolute;
   transition: all 500ms ease-in-out;
 }
 
-.winner-circles-inner{
+.winner-circles-inner {
   width: 280px;
   height: 280px;
   z-index: -20;
   opacity: 0.07;
 }
 
-.winner-circles-midd{
+.winner-circles-midd {
   width: 350px;
   height: 350px;
   z-index: -21;
   opacity: 0.05;
 }
 
-.winner-circles-outer{
+.winner-circles-outer {
   width: 450px;
   height: 450px;
   z-index: -22;
@@ -386,7 +387,7 @@ header {
   padding-inline: 20px;
 }
 
-.responsive-close{
+.responsive-close {
   display: none;
 }
 
@@ -501,8 +502,7 @@ header {
 }
 
 @media screen and (max-width: 1366px) {
-  
-  .results{
+  .results {
     top: 63%;
   }
 }
@@ -525,8 +525,6 @@ header {
   .final-result-text {
     font-size: 36px;
   }
-
-  
 
   @keyframes moveTextToLeft {
     0% {
@@ -552,7 +550,7 @@ header {
     max-height: 100vh;
     width: 100%;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
   }
 
   header {
@@ -562,7 +560,7 @@ header {
     padding: 15px 10px 10px 15px;
   }
 
-  .container{
+  .container {
     overflow: hidden;
     justify-content: start;
     gap: 0px;
@@ -633,16 +631,16 @@ header {
     scale: 1;
   }
 
-  .winner-circles-inner{
+  .winner-circles-inner {
     width: 250px;
     height: 250px;
   }
 
-  .final-result{
+  .final-result {
     bottom: -10%;
   }
 
-  .final-result-text{
+  .final-result-text {
     font-size: 60px;
   }
 
@@ -679,16 +677,16 @@ header {
     gap: 50px;
   }
 
-  .rules-btn{
+  .rules-btn {
     right: 50%;
     transform: translateX(50%);
   }
 
-  .modal-header img{
+  .modal-header img {
     display: none;
   }
 
-  .responsive-close{
+  .responsive-close {
     display: block;
     scale: 1.5;
   }
@@ -709,7 +707,6 @@ header {
     animation: none;
   }
 
-
   @keyframes moveModal {
     0% {
       transform: translateX(0%) translateY(150%);
@@ -718,19 +715,22 @@ header {
       transform: translateX(0%) translateY(0%);
     }
   }
-  
 }
 
-@media screen and (max-width: 400px){
-    .results{
-      padding-top: 50px;
-    }
+@media screen and (max-width: 400px) {
+  body {
+    overflow-y: auto;
+  }
 
-    .final-result{
-      bottom: -2%;
-    }
+  .results {
+    padding-top: 50px;
+  }
 
-    .final-result-text{
-      font-size: 50px;
-    }
+  .final-result {
+    bottom: -2%;
+  }
+
+  .final-result-text {
+    font-size: 50px;
+  }
 }
